--- a/app/views/applies/show.html.erb
+++ b/app/views/applies/show.html.erb
@@ -1,6 +1,6 @@
 <!-- show application to editor -->
 
-<h1 id="page_title"><%= @application.kind || "Writer" %> Application <%= @application.id %></h1>
+<h1 id="page_title_padded"><%= @application.kind || "Writer" %> Application <%= @application.id %></h1>
 <br>
 <div class="form_wrapper wrapper_padding">
   <% if @invitation.present? %>
