--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="skinny_wrapper pb-4">
-  <h1 id="page_title">Edit Category</h1>
+  <h1 id="page_title_padded">Edit Category</h1>
   <%= render "/categories/form" %>
   <div class="pb-4" style="margin-top: -70px;">
     <%= form_for @category do |f| %>
