--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,4 +1,4 @@
 <div class="skinny_wrapper">
-  <h1 id="page_title">New Category</h1>
+  <h1 id="page_title_padded">New Category</h1>
   <%= render "categories/form" %>
 </div>
