--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<h1 id="page_title">Apply to Become a Writer for the Teen Magazine!</h1>
+<h1 id="page_title_padded">Apply to Become a Writer for the Teen Magazine!</h1>
 <div class="form_wrapper wrapper_padding">
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= devise_error_messages! %>
