--- a/app/views/pages/copyright.html.erb
+++ b/app/views/pages/copyright.html.erb
@@ -1,5 +1,5 @@
 <div class="privacy" style="width: 80%; max-width: 1000px; margin: 0 auto;">
-  <h1 id="page_title">Copyright Policy</h1>
+  <h1 id="page_title_padded">Copyright Policy</h1>
 <p>Last Updated 05-11-2023</p>
 
 <h3>Notification of Copyright Infringement:</h3>
