--- a/app/views/pages/criteria.html.erb
+++ b/app/views/pages/criteria.html.erb
@@ -1,24 +1,26 @@
 <div class="skinny_wrapper criteria">
-  <h1 id="page_title">Criteria & FAQ</h1>
+  <h1 id="page_title_padded">Frequently Asked Quetions</h1>
+  <p class="question">Have a question that isn't answered here?</p>
+  <p>Join the Discord group and ask in one of the relevant chats!</p>
+  <iframe src="https://discord.com/widget?id=1081601449550688286&theme=dark" width="100%" height="200" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
   <p class="question">How long does it take for an article to be reviewed? </p>
-  <p>It depends on the article. If there are very few mistakes it can take anywhere from a few hours to a couple of days. If the article needs to be corrected by the editor or needs bigger changes, it can take up to five days to be either returned or published.</p>
+  <p>Editors have a deadline of 48 hours to review an article once they claim a review. You will be notified via email when this happens and your article's status on your home page will change to "In Review".</p>
   <p class="question">How long does it take for an article to be published? </p>
   <p>Usually when an article has been approved, it'll be published right away. Sometimes, however, it will be delayed by a few days if there have been many recently published articles.</p>
-  <p class="question">How long should my article be? </p>
-  <p>The perfect article length is around 1000+ words. Slightly shorter articles are okay if they are filled with lots of images/gifs.</p>
   <p class="question">I don't want comments on my article. How do I turn them off?</p>
   <p>Once your article is published, there will be an option on the edit page of your article that says "Turn off commenting". You can also delete individual comments under your articles.</p>
   <p class="question">How often should I submit an article?</p>
-  <p>Preferably, you should be uploading articles at least once every two weeks so that our site can stay active. You can opt-in to bi-weekly article
-    assignments your <%= link_to "edit profile page", edit_user_path(current_user) %>. There is no limit to how many articles you can submit per month, and we would love for you to write as many articles as you have time for.</p>
+  <p>Preferably, you should be uploading articles at least once every two weeks so that our site can stay active, but there are no hard requirements around this.</p>
+  <p class="question">What images can I include? </p>
+  <p>Please visit <a href="/image-requirements">Image Requirements</a>.</p>
   <p class="question">How do I include images? </p>
   <p>Please visit <a href="/writing-the-perfect-article">Writing The Perfect Article</a>.</p>
   <p class="question">What should I write about? </p>
   <p>Please Visit <a href="/choosing-a-topic">Pitching an Article</a> or claim a pitch from <%= link_to("Editor Pitches", pitches_path) %>.</p>
   <p class="question">What if I want to write something that doesn't fit a category? </p>
-  <p>If you want to pitch an article idea that doesn't fit a category, it might not be right for The Teen Magazine, but you can reach out to any one of the editors through the Facebook group to ask about your idea.</p>
+  <p>If you want to pitch an article idea that doesn't fit a category, it might not be right for The Teen Magazine, but you can reach out to any one of the editors through the Discord group to ask about your idea.</p>
   <p class="question">What if I have a friend that wants to write for The Teen Magazine?</p>
-  <p>That's great! Tell your friend to apply at <a href="http://www.theteenmagazine.com/apply">www.theteenmagazine.com/apply</a>. We will then review your friend's application and send her an email with her account if she's accepted.</p>
+  <p>That's great! Tell your friend to apply at <a href="http://www.theteenmagazine.com/apply">www.theteenmagazine.com/apply</a>. We will then review your friend's application and send her an email with her account if they're accepted.</p>
   <p class="question">How can I pitch an article idea? </p>
   <p>Only editors can pitch article topics to the Unclaimed Pitches page but if you have your own article idea that you want to write, you can pitch the topic to our editors. Please follow the guide explained in <a href="/choosing-a-topic">Pitching an Article</a>.</p>
   <p class="question">How can I become an editor?</p>
@@ -27,9 +29,7 @@
   <p class="question">How can I change my password? </p>
   <p>You can change your password  <a target="_blank" href="/users/edit">here</a>.</p>
   <p class="question">How can I interview someone on The Teen Magazine?</p>
-  <p>Right now, our interview team is invite-only but opportunities to join will expand in the future. If you really would like to join our team earlier, you can contact Mia at mia@theteenmagazine.com.</p>
-  <p class="question">Have a question that wasn't answered here?</p>
-  <p>Email us at editors@theteenmagazine.com or message one of the editors in the <a href="https://www.facebook.com/groups/615063885673363/">Facebook group</a>.</p>
+  <p>Right now, our interview team is invite-only and opportunities open up periodically. You can ask in the <b>#ask-interviewers</b> chat on Discord how to apply.</p>
   <svg class="checkmark" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52">
     <circle cx="26" cy="26" r="25" fill="none"/>
     <path fill="none" d="M14.1 27.2l7.1 7.2 16.7-16.8"/>
