--- a/app/views/pages/images.html.erb
+++ b/app/views/pages/images.html.erb
@@ -1,16 +1,5 @@
 <div class="skinny_wrapper theimages">
-  <h1 id="page_title">Image Policy</h1>
-  <div class="alert alert-warning" role="alert">
-    <p class="m-0">
-    Due to an ongoing copyright issue, our image policy is now much stricter. 
-    Published articles that <b>have not accepted our image policy</b> have had their images/thumbnails hidden.</p>
-    <p class="m-0">To show the hidden images:</p>
-    <ol>
-      <li>Cite the images in accordance with the new image policy below (or delete/replace the images).</li>
-      <li>Accept the image policy on your article's edit page to show the images.</li>
-    </ol>
-    <p class="m-0">Articles published from May, 2023 to August 2023, that have accepted the <b>old image policy</b>, have until <b>October 31, 2023</b> to comply with the <b>new image policy</b> to avoid their images being hidden or deleted.</p>
-  </div>
+  <h1 id="page_title_padded">Image Policy</h1>
   <h3><b>Image Usage Policy</b></h3>
   <p>As a writer for our platform, you are responsible for ensuring that any images used in your content comply with applicable copyright laws and are used in accordance with our policies. Failure to follow this policy will result in your immediate removal from The Teen Magazine's platform.</p>
   <ul>
