--- a/app/views/pages/privacy.html.erb
+++ b/app/views/pages/privacy.html.erb
@@ -1,5 +1,5 @@
 <div class="privacy" style="width: 80%; max-width: 1000px; margin: 0 auto;">
-  <h1 id="page_title">The Teen Magazine Privacy Policy</h1>
+  <h1 id="page_title_padded">The Teen Magazine Privacy Policy</h1>
   <p>At The Teen Magazine, we are deeply committed to safeguarding your personally identifiable Information in accordance with US privacy laws and information security standards. To provide you with clarity regarding the handling of your personal information, please carefully review our privacy policy, which explains how we collect, utilize, and protect your information within the scope of our website.</p>
 
   <p><strong>What Personal Information Do We Collect?</strong></p>
