--- a/app/views/pages/topics.html.erb
+++ b/app/views/pages/topics.html.erb
@@ -1,13 +1,22 @@
 <div class="skinny_wrapper topics">
-  <h1 id="page_title">Pitching an Article</h1>
+  <h1 id="page_title_padded">Pitching an Article</h1>
 
-  <p>You may write an article on anything that fits into a category and is relevant/helpful to our teenage audience.
+  <p>You may write an article on anything that fits into a category and meets our content policy below.
      If you're not sure what to write about, it is recommended to claim a pitch from our editors <%= link_to "here", pitches_path %>.</p>
 
   <p>Our editors reserve the right to reject any pitch that does not meet the below criteria. To pitch a new article topic, go <a target="_blank" href="/pitches/new">here</a>.</p>
 
-  <h3 id="topic-requirements">Topic requirements</h3>
+  <h3 id="topic-requirements">Content requirements</h3>
 
+  <p>An article or pitch will not be approved if it:</p>
+  <ul>
+    <li>Depicts, contains, or provides access to violent content or threatens physical harm to a particular individual or group</li>
+    <li>Is pornographic or obscene</li>
+    <li>Contains copyrighted content</li>
+  </ul>
+  <p>This includes any pitches that directly deal with or report on violence, sex, drugs, or otherwise fit into any of the above categories.</p>
+  <p>Any articles/pitches that are approved/published and go against these policies will be immediately taken down. The Teen Magazine also has the right to remove any writers or editors who repeatedly ignore these content policies.</p>
+  <h5 id="topic-requirements"><b>The topic should be relevant to a teenage audience</b></h5>
   <p>Any article that is pitched should be specifically made for a teenage audience. This means it addresses a topic, experience, and/or problem that is felt by, or of interest to, some or most teens. It is not enough for the article to be of interest to some teens just because the topic has such a broad audience already (see diagram).</p>
   <%= image_tag("specificity_diagram.png", class: "image_fit_scrn") %>
   <p>It can be helpful to keep some notes on your phone to jot down ideas for article topics. If you are currently in, or just graduated, high school, think about your daily life and the things that you are struggling with. What excites you? What scares you? What would you love to learn more about?
@@ -36,8 +45,12 @@
   </p>
 
   <h3 id="thumbnail-requirements">Thumbnail image requirements</h3>
+  <p>
+    First and foremost, the thumbnail image should meet The Teen Magazine's <a href="/image-policy" target="_blank">image policy</a>. We take copyright extremely seriously at The Teen Magazine, and failure to follow the image policy will result in your removal from The Teen Magazine.
+    If there is anything unclear, it is your responsibilty to message in the Discord <b>#ask-editors</b> chat.
+  </p>
 
-  <p>The thumbnail image should be relevant to the topic, not grainy, not cropped in a weird way, and not contain a mostly white background.</p>
+  <p>The thumbnail image should also be relevant to the topic, not grainy, not cropped in a weird way, and not contain a mostly white background.</p>
 
   <svg class="checkmark" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52">
     <circle cx="26" cy="26" r="25" fill="none"/>
