--- a/app/views/pages/writing.html.erb
+++ b/app/views/pages/writing.html.erb
@@ -1,5 +1,5 @@
 <div class="skinny_wrapper writing topics">
-  <h1 id="page_title">Writing The Perfect Article</h1>
+  <h1 id="page_title_padded">Writing The Perfect Article</h1>
   <h3>Starting a Draft</h3>
   <p>
     To start an article, either pitch your own topic (follow the guidelines <a href="/choosing-a-topic" target="_blank">Here</a>), or choose from the existing editor pitches <a href="/pitches" target="_blank">Here</a>. Once your pitch gets approved and/or you claim an article pitch, a new draft will be started and become reachable through your writer dashboard under “Articles In Progress.” Most editor pitches have a deadline associated with it. Read more about deadlines <a href="/writing-the-perfect-article#deadlines-and-extensions">here</a>.
@@ -24,7 +24,7 @@
 
   <h3 id="article-requirements">Article Requirements for Publication</h3>
   <p>The below questions are used by editors to determine if an article is ready for publication. Make sure that you can answer <b>Yes</b> to all these requirements before submitting for review.</p>
-  <h5>1. Is the topic relevant to The Teen Magazine's audience?</h5>
+  <h5>1. Does the topic meet The Teen Magazine's <a href="/content-policy">content policy</a>, and is the topic relevant to The Teen Magazine's audience?</h5>
   <p>An article is relevant to The Teen Magazine’s audience if it addresses a topic, experience, and/or problem that is felt by, or of interest to, some or most teens. For more information, see <a target="_blank" href="/choosing-a-topic">Pitch Requirements</a>.</p>
   <h5>2. Is the title searchable and/or shareable?</h5>
   <p>A title is shareable if it is interesting and can reasonably spark curiosity and/or some other emotion. Some great examples of shareable titles are "How Dressing Like Blair Waldorf Helped Me Take My SATs," "The Stages of All High School Relationships from an Outsider," "Why You Might Find It Hard to Make Deep Friendships," while vague, non-specific titles such as "Loving Your Body" will not be approved. When crafting your title it can be useful to type it into the headline analyzer tool found here: <a href="https://aminstitute.com/headline/" target="_blank">https://aminstitute.com/headline/</a>. Nine times out of ten, a shareable title should have an Emotional Marketing Value (EMV) score over 30. However, this measure is a tool, not the rule. If the title is only a few words, this headline analyzer is not reliable and the title is likely too vague. Alternatively, a title is searchable if it contains keywords/phrases that would be reasonably typed into Google search. These titles are often questions, short responses, lists, etc. The topic should be specific enough that The Teen Magazine can come up in Google search. For example, “Cutest High School Romance Movies That Will Make You Cry” includes the keyword phrase "High School Romance Movies" which is a lot more specific than just “Best Netflix Movies."</p>
