--- a/app/views/pitches/_form.html.erb
+++ b/app/views/pitches/_form.html.erb
@@ -16,7 +16,7 @@
     <p>Don't know what to write about? Visit <a target="_blank" href="/choosing-a-topic#topic-requirements">Topic Requirements</a> for some inspiration.</p>
   <% end %>
   <p>Write a <a target="_blank" class="link_grn" href="/choosing-a-topic#title-requirements">Shareable and/or Searchable</a> title here:</p>
-  <%= f.text_field :title, placeholder: "How can you spark curiosity with your title? 👀🖊️" %>
+  <%= f.text_field :title, placeholder: "Write a title that will make your readers want to learn more! 👀🖊️" %>
   <p>Explain your idea and why the article topic fits <a target="_blank" class="link_grn" href="/choosing-a-topic#topic-requirements">The Teen Magazine's audience</a>:</p>
   <div id="container">
     <%= f.text_area :description, id: "editor", placeholder: "Your idea..." %>
