--- a/app/views/users/dashboard/_guidelines.html.erb
+++ b/app/views/users/dashboard/_guidelines.html.erb
@@ -2,7 +2,7 @@
   <div class="thelink">
     <a href="/criteria">
     <div class="box foo G1 ">
-      <p>Criteria & FAQ</p>
+      <p>FAQ</p>
     </div>
     </a>
   </div>
