--- a/app/views/users/managing_editors.html.erb
+++ b/app/views/users/managing_editors.html.erb
@@ -1,5 +1,5 @@
 <div class="flex_horizontal center">
-  <h1 id="page_title" style="border-bottom: none; margin-top: 0px;">Managing Editors</h1>
+  <h1 id="page_title_padded" style="border-bottom: none; margin-top: 0px;">Managing Editors</h1>
 </div>
 <div id="posts_wrapper" class="skinny_wrapper mb-4">
     <div class="alert alert-info" role="alert">
