--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -375,7 +375,7 @@ body {
 .editor {
   height: 200px;
   width: 100%;
-  background-color: #085f63;
+  background-color: #e4ecff !important;
 }
 
 .invite {
@@ -1285,9 +1285,8 @@ footer {
   }
 }
 
-#page_title {
+#page_title_padded {
   text-align: center;
-  border-bottom: 1px solid #e9e9e9;
   padding: 3em 0;
   font-size: 1rem;
   text-transform: uppercase;
