--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,4 @@
-<h1 id="page_title">Change Password</h1>
+<h1 id="page_title_padded">Change Password</h1>
 <div class="skinny_wrapper wrapper_padding" style="max-width: 1000px;">
   <br>
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
