--- a/app/views/layouts/writer.html.erb
+++ b/app/views/layouts/writer.html.erb
@@ -37,7 +37,7 @@
     <% end %>
     <% if @load_only_ck_box %>
       <script src="https://cdn.ckbox.io/ckbox/2.1.0/ckbox.js"></script>
-    <% elsif (params[:controller].eql? 'posts') || (params[:controller].eql? 'pitches') || (params[:controller].eql? 'newsletters') %>
+    <% elsif (params[:controller].eql? 'pages') || (params[:controller].eql? 'posts') || (params[:controller].eql? 'pitches') || (params[:controller].eql? 'newsletters') %>
       <%= stylesheet_link_tag 'ckeditor' %>
       <script src="https://cdn.ckeditor.com/ckeditor5/39.0.2/super-build/ckeditor.js"></script>
       <script src="https://cdn.ckbox.io/ckbox/2.1.0/ckbox.js"></script>
