--- a/app/views/reviews/_editor_dashboard.html.erb
+++ b/app/views/reviews/_editor_dashboard.html.erb
@@ -21,7 +21,7 @@
             <div data-step data-index="1" data-onboarding-content="Welcome to your editor dashboard! Articles you're reviewing will show up here.">
               <h5 class="pitch_ttl">Drafts You're Reviewing</h5>
               <div class="alert alert-warning" role="alert">
-                Due to an ongoing copyright issue, <b>our image policy has changed as of October 19th, 2023</b>. Please make sure you've read the <a target="_blank" style="text-decoration: underline;" href="/finding-images">updated image policy</a> before reviewing any additional articles. 
+                Please note: Publishing an article that does not meet all of the <a target="_blank" style="text-decoration: underline;" href="/finding-images">image policy</a> requirements will result in your removal from the editor team. It is your responsibility to review it in depth and communicate the the Discord <b>#editor-chat</b> if there is anything that is unclear. Thank you!
               </div>
               <% @editors_reviews.each do |draft| %>
                 <div class="flex--postlist--item review_items pl-0">
