--- a/app/views/users/editors.html.erb
+++ b/app/views/users/editors.html.erb
@@ -1,5 +1,5 @@
 <div class="flex_horizontal center">
-  <h1 id="page_title" style="margin-bottom: -20px; border-bottom: none;">Editors</h1>
+  <h1 id="page_title_padded" style="margin-bottom: -20px; border-bottom: none;">Editors</h1>
 </div>
 <div id="posts_wrapper" class="skinny_wrapper mb-4">
   <div class="flex_horizontal">
